force-app/main/default/objects/Evidence_Capture_Policy__mdt/Evidence_Capture_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Evidence Capture Policy</label>
    <pluralLabel>Evidence Capture Policies</pluralLabel>
</CustomObject>