force-app/main/default/objects/Evidence_Capture_Policy__mdt/fields/Agent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_API_Name__c</fullName>
    <label>Agent API Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>