force-app/main/default/objects/Evidence_Capture_Policy__mdt/fields/Capture_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Capture_Considerations__c</fullName>
    <label>Capture Considerations</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>