force-app/main/default/objects/Evidence_Capture_Policy__mdt/fields/Capture_Grounding__c.field-meta.xml
<CustomField>
    <fullName>Capture_Grounding__c</fullName>
    <label>Capture Grounding</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>