force-app/main/default/objects/Evidence_Capture_Policy__mdt/fields/Capture_Response__c.field-meta.xml
<CustomField>
    <fullName>Capture_Response__c</fullName>
    <label>Capture Response</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>