force-app/main/default/objects/Evidence_Capture_Policy__mdt/fields/Capture_Utterance__c.field-meta.xml
<CustomField>
    <fullName>Capture_Utterance__c</fullName>
    <label>Capture Utterance</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>