force-app/main/default/objects/Evidence_Capture_Policy__mdt/fields/Capture_Variables__c.field-meta.xml
<CustomField>
    <fullName>Capture_Variables__c</fullName>
    <label>Capture Variables</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>