force-app/main/default/objects/Evidence_Capture_Policy__mdt/fields/Require_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Require_Rationale__c</fullName>
    <label>Require Rationale</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>